src/objects/CCF_Search_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>CCFRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCF Request</label>
        <referenceTo>CCF_Request_Header__c</referenceTo>
        <relationshipLabel>Search Criteria</relationshipLabel>
        <relationshipName>Search_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ECC_Contract_ID__c</fullName>
        <label>ECC Contract ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Landscape__c</fullName>
        <label>Landscape</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_ID__c</fullName>
        <label>Material ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_ID__c</fullName>
        <label>Plant ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Search_Criteria</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CCF Search Criteria</label>
    <nameField>
        <label>Country</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Search Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>